--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
   <tr>
     <th>Item name</th>
     <th>Price</th>
-    <th><button name="add">Add</button></th>
+    <th><a href="/items/new"><button name="add">Add</button></a></th>
   </tr>
 
   <% @items.each do |item| %>
@@ -14,8 +14,8 @@
       <td><%= item.name %></td>
       <td><%= item.price %></td>
       <td>
-        <button name="edit">Edit</button>
-        <button name="delete">Delete</button>
+        <a href="/items/<%= item.id %>/edit"><button name="edit">Edit</button></a>
+        <a href="/items/<%= item.id %>" data-method="delete" data-confirm="Are you sure you want to delete <%= item.name %>?"><button name="delete">Delete</button></a>
       </td>
     </tr>
   <% end %>
