[MOKA-002] Finish the implementation of User registration (and the Business associated with the User)

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, "Items") %>
 
-<h1>Listing items</h1>
+<h1>Listing Items</h1>
 
 <table class="item-list">
   <tr>
-    <th>Item name</th>
+    <th>Item Name</th>
     <th>Price</th>
     <th><a href="/items/new"><button name="add">Add</button></a></th>
   </tr>
