--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,2 +1,26 @@
 <% provide(:title, "New Item") %>
-<%= render partial: "form", locals: {item: @item, action: 'New'} %>
+<h1 class="text-center">New Item</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3" id="newitem-form">
+    <%= form_for(@item) do |f| %>
+      <% if @item.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@item.errors.count, "invalid value") %>.</h2>
+
+          <ul>
+          <% @item.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :price %>
+      <%= f.text_field :price %>
+
+      <%= f.submit "Create Item", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
