--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, 'Sign Up') %>
-<h1 class="text-center">Sign Up</h1>
+<% provide(:title, 'Edit Profile') %>
+<h1 class="text-center">Edit Profile</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3" id="signup-form">
+  <div class="col-md-6 col-md-offset-3" id="editprofile-form">
     <%= form_for(@user) do |f| %>
       <% if @user.errors.any? %>
         <div id="error_explanation">
@@ -29,7 +29,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Create My Account", class: "btn btn-primary" %>
+      <%= f.submit "Update My Profile", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
